[package]
name = "concal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
chrono = { version = "0.4.38", features = ["now"] }
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.17.2"
itertools = "0.12"
owo-colors = "3"
